# nTF

./: .gitignore  HexChkInpPcc.f90  README.md  nTRACER.inp  nTRACER.sln  nTRACER.vfproj
GNU/: CP - GNU  CP - INTEL  Makefile  nTRACER.cbp  nTRACER.depend  nTRACER.layout
PGI/: CnP - GNU  Makefile  nTRACER.cbp  nTRACER.depend  nTRACER.layout
PGI/Linux/: CMakeLists.txt  MakeClean  MakeParallel  MakeParallelMKL  MakeSequential  MakeSequentialMKL  Makefile  MakefileOld  MakefileOld2  log
ref/: C5G7 H 2D FC 060.out  C5G7 H 2D FC 360.out  C5G7 H 2D MA.out  C5G7 H 2D SngCel 4.out  C5G7 H 3D Core RB 060 DIV 08.out  V-10 A02 FS20 V03 NM MLG SCAT=0.out  V-10 A02 SC V03 060.out  V-10 A02 SC V06 060.out  V-10 A04 V03 060.out  V-10 A04 V09.out  V-4.4 FC w VYG 060.out  V-4.4 SA 3.out  _SAVE C5G7 H FC 2D FS.out  _SAVE C5G7 H FC 2D HS.out  _SAVE C5G7 H FC 3D HS RB Div 08.out  _SAVE C5G7 H SngAsy MA.out  _SAVE C5G7 H SngCel 4.out  _SAVE V-10 FC 2D HS A04 V09.out  _SAVE V-10 SC 2D HS A02 V06.out  _SAVE V-4.4 FC 2D HS w VYG.out  _SAVE V-4.4 SngAsy 3.out
src/: AllocAxSol.f90  AllocPdm.f90  AllocTh.f90  ApproxExp.f90  AuxiliaryCSR.f90  AxialSp3_mod.f90  B10Depl.f90  B1_mod.f90  BasicOperation.f90  BenchXs_mod.f90  BiCGSTAB.f90  BiCGSTAB2g.f90  BiLU.f90  BinOutPutEdit.f90  BoronCoolant.f90  Boron_mod.f90  CMFDComm_mod.f90  CMFDTally.f90  CMFD_COMMON.f90  CNTLROD_mod.f90  CP_mod.f90  CSRMATRIX.f90  CTFTH_mod.f90  CUDADEFINES.h  CUDATypeDef.f90  CUDA_AXIAL.f90  CUDA_AXMOC.f90  CUDA_AXRT.f90  CUDA_CMFD.f90  CUDA_COMMON.f90  CUDA_DEPL.f90  CUDA_DRIVER.f90  CUDA_INIT.f90  CUDA_MOC.f90  (+369 more)
